<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BUPTTravel</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">欢迎来到智游！请登录~</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password_repeat">重复密码</string>
    <string name="sex">性别</string>
    <string name="submit">确定</string>
    <string name="regist">注册</string>
    <string name="welcome_regist">请填写您的注册信息~</string>
    <string name="userTravelLists">用户游记列表</string>
    <string name="days">天数：</string>
    <string name="desc">无</string>
    <string name="addTravel">添加游记</string>
    <string name="myTravel">我的游记</string>
    <string name="draftbox">草稿箱</string>
    <string name="searchTravel">搜索游记</string>
    <string name="userInfoTitile">我的</string>
    <string name="search">搜索</string>
    <string name="addTitile">游记标题</string>
    <string name="addFootprint">添加足迹</string>
    <string name="addLocation">点击图标定位</string>
    <string name="save">保存游记</string>
    <string name="upload">上传游记</string>
    <string name="addBackground">添加游记背景</string>
</resources>
