<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"     
    android:orientation="vertical"
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent"> 

    <LinearLayout  
        android:id="@+id/summary_addTravel"  
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"    
	    android:layout_height="wrap_content"> 
	   <TextView android:text="@string/addTitile"/>
	   <EditText
	       android:id="@+id/title_addTravel"
	       android:inputType="none" 
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"/>
	   <Button
	       android:id="@+id/addFootprint_addTravel"
		   android:layout_width="60dp"
		   android:layout_height="wrap_content" 
		   android:layout_gravity="center_horizontal"
		   style="?android:attr/buttonBarButtonStyle"
		   android:text="@string/addFootprint" />
	   <Button
	       android:id="@+id/save_addTravel"
		   android:layout_width="60dp"
		   android:layout_height="wrap_content" 
		   android:layout_gravity="center_horizontal"
		   style="?android:attr/buttonBarButtonStyle"
		   android:text="@string/save" />
	   <Button
	       android:id="@+id/upload_addTravel"
		   android:layout_width="60dp"
		   android:layout_height="wrap_content" 
		   android:layout_gravity="center_horizontal"
		   style="?android:attr/buttonBarButtonStyle"
		   android:text="@string/upload" />
	   <Button
	       android:id="@+id/addBackground_addTravel"
		   android:layout_width="60dp"
		   android:layout_height="wrap_content" 
		   android:layout_gravity="center_horizontal"
		   style="?android:attr/buttonBarButtonStyle"
		   android:text="@string/addBackground" />
    </LinearLayout>
        
    <!-- 添加一个ListView控件 --> 
    <ListView
        android:id="@+id/list_footprint"   
        android:layout_width="fill_parent"     
        android:layout_height="wrap_content"/> 
        
</LinearLayout>