<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold" />

	<TableLayout  
		  android:id="@+id/table_Login"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:layout_marginLeft="20dp"
          android:layout_marginRight="60dp"
		  android:shrinkColumns="1"
		  android:stretchColumns="1" >
		  
		  <TableRow>
		      <TextView android:text="@string/username"/>
		      <EditText
        	    android:id="@+id/userName_Login"
        	    android:inputType="none" 
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"/>		   
		  </TableRow>
		  
		  <TableRow>
		      <TextView android:text="@string/password"/>
		      <EditText
        	    android:id="@+id/password_Login"
        	    android:inputType="textPassword"
        	    android:layout_width="fill_parent"
        	    android:layout_height="wrap_content"/>
		  </TableRow>  
	  
	 </TableLayout>
	 
	 <RelativeLayout
	     android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
    	 android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
    	 android:orientation="horizontal" >
		 <Button
		     android:id="@+id/submit_Login"
		     android:layout_width="60dp"
		     android:layout_height="wrap_content" 
		     style="?android:attr/buttonBarButtonStyle"
		     android:text="@string/submit" />
		 <Button
		     android:id="@+id/regist_Login"
		     android:layout_width="60dp"
		     android:layout_height="wrap_content" 
		     style="?android:attr/buttonBarButtonStyle"
		     android:text="@string/regist" 
        	 android:layout_toRightOf="@+id/submit_Login"      	   
        	 android:layout_marginRight="15dp"/>
	 </RelativeLayout>
	 
	 <com.amap.api.maps2d.MapView 
	   xmlns:android="http://schemas.android.com/apk/res/android"
	   android:id="@+id/map"
	   android:layout_width="fill_parent"
	   android:layout_height="fill_parent" />
</LinearLayout>